test/fails/test3.jl
using Test

@testset "error1" begin
throw_error1
end

@testset "error2" begin
throw_error2
end

@testset "error3" begin
throw_error3
end
